--- a/drawIT/appsettings.json
+++ b/drawIT/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Database": "drawit",
+  "AzureService": "azure-services",
   "AllowedHosts": "*"
 }
