Adding Llama service and appropriate models.

--- a/drawIT/appsettings.json
+++ b/drawIT/appsettings.json
@@ -7,6 +7,8 @@
   },
   "Database": "drawit",
   "AzureService": "azure-services",
-  "AWSService":  "aws-services",
+  "AWSService": "aws-services",
+  "LLM-URL": "http://localhost:11434/api/chat",
+  "PromptTemplatePath":  "//Prompts//PromptTemplate.txt",
   "AllowedHosts": "*"
 }
