Writing down configuration and drawing requests in database.

--- a/drawIT/appsettings.json
+++ b/drawIT/appsettings.json
@@ -8,7 +8,9 @@
   "Database": "drawit",
   "AzureService": "azure-services",
   "AWSService": "aws-services",
+  "ConfigurationRequest": "configurations",
+  "DrawingRequest": "drawings",
   "LLM-URL": "http://localhost:11434/api/chat",
-  "PromptTemplatePath":  "//Prompts//PromptTemplate.txt",
+  "PromptTemplatePath": "//Prompts//PromptTemplate.txt",
   "AllowedHosts": "*"
 }
