Initial setup for adding architecture suggestions

--- a/drawIT/appsettings.json
+++ b/drawIT/appsettings.json
@@ -10,6 +10,8 @@
   "AWSService": "aws-services",
   "ConfigurationRequest": "configurations",
   "DrawingRequest": "drawings",
+  "AzureSuggestions": "azure-suggestions",
+  "AWSSuggestions": "aws-suggestions",
   "LLM-URL": "http://localhost:11434/api/chat",
   "PromptTemplatePath": "//Prompts//PromptTemplate.txt",
   "AllowedHosts": "*"
